# PassiveDataKit-Android

./: .gitignore  .travis.yml  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  lint.xml  proguard-rules.pro  settings.gradle
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
aars/amazon-maps-api-v2/: build.gradle
aars/fgchecker-release/: build.gradle  fgchecker-release.aar
assets/js/: rickshaw.min.js
cpp/src/: VadUtil.cpp  VadUtil.h
libs/: amazon-maps-api-v2.aar
res/drawable/: circle_screen_state_doze.xml  circle_screen_state_off.xml  circle_screen_state_on.xml  circle_screen_state_unknown.xml  ic_location_heatmap_marker.xml
res/layout/: card_diagnostic_action.xml  card_generator_app_event.xml  card_generator_app_event_page.xml  card_generator_device_battery.xml  card_generator_diagnostics_system_status.xml  card_generator_fitbit.xml  card_generator_fitbit_sleep_page.xml  card_generator_foreground_application.xml  card_generator_generic.xml  card_generator_google_awareness.xml  card_generator_location_google.xml  card_generator_location_mapbox.xml  card_generator_microsoft_band.xml  card_generator_nokia_health_activity_page.xml  card_generator_nokia_health_body_page.xml  card_generator_nokia_health_device.xml  card_generator_nokia_health_intraday_page.xml  card_generator_nokia_health_workouts_page.xml  card_generator_phone_calls.xml  card_generator_screen_state.xml  card_generator_sensors_accelerometer.xml  card_generator_sensors_ambient_light.xml  card_generator_text_messages.xml  card_generator_time_of_day.xml  card_generator_withings_activity_page.xml  card_generator_withings_body_page.xml  card_generator_withings_device.xml  card_generator_withings_info_page.xml  card_generator_withings_intraday_page.xml  card_generator_withings_sleep_page.xml  card_generator_withings_sleep_summary_page.xml  card_generator_withings_workouts_page.xml  content_app_usage_selection.xml  dialog_location_randomized.xml  dialog_location_user.xml  dialog_maintenance.xml  layout_app_usage_selection.xml  layout_data_disclosure_detail_pdk.xml  (+8 more)
(+133 files in other folders)
